fixed issue #11